--- a/index.html
+++ b/index.html
@@ -3,11 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>คำนวณค่าเฉลี่ย</title>
+    <title>คำนวณค่าเฉลี่ยและยอดจัด</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500&display=swap" rel="stylesheet">
+    <style>
+        /* เพิ่มสไตล์สำหรับปุ่มใหม่และส่วนแสดงผลลัพธ์ */
+        .daily-sales-button {
+            background: linear-gradient(45deg, #FF9800, #FFC107); /* สีส้ม-เหลือง */
+            color: white;
+            margin-top: 15px; /* ระยะห่างจากปุ่มด้านบน */
+            padding: 12px; /* ลด padding เล็กน้อย */
+            font-size: 1.1em; /* ปรับขนาด font */
+        }
+
+        .daily-sales-button:hover {
+            background: linear-gradient(45deg, #f57c00, #ffb300);
+        }
+
+        #dailySalesResult {
+            margin-top: 20px;
+            padding: 15px;
+            background-color: rgba(255, 255, 255, 0.15);
+            border-radius: 8px;
+            color: #fff;
+            font-size: 1.1em;
+            text-align: center;
+            display: none; /* ซ่อนไว้ก่อนจนกว่าจะมีผลลัพธ์ */
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+    </style>
 </head>
 <body>
     <div class="background-image"></div>
@@ -27,7 +53,9 @@
                 <input type="number" id="days" name="days" required>
             </div>
             <button type="submit">คำนวณค่าเฉลี่ย</button>
+            <button type="button" id="calculateDailySalesBtn" class="daily-sales-button">คำนวณยอดจัดรายวัน 💰</button>
         </form>
+        <div id="dailySalesResult"></div>
     </div>
 
     <a href="songs.html" class="floating-button left">🦆</a>
@@ -57,11 +85,42 @@
                 return;
             }
 
-            // ใช้สูตรคำนวณตามที่กำหนด
             const average = ((sku / 12) + (mu / 34)) / (2 * days);
-
             window.location.href = `average.html?avg=${average.toFixed(2)}`;
         });
+
+        // --- ฟังก์ชันใหม่สำหรับคำนวณยอดจัดรายวัน ---
+        document.getElementById('calculateDailySalesBtn').addEventListener('click', function() {
+            const sku = parseFloat(document.getElementById('sku').value);
+            const mu = parseFloat(document.getElementById('mu').value);
+            const days = parseFloat(document.getElementById('days').value);
+            const dailySalesResultDiv = document.getElementById('dailySalesResult');
+
+            if (isNaN(sku) || isNaN(mu) || isNaN(days)) {
+                dailySalesResultDiv.textContent = 'กรุณากรอกข้อมูล SKU, MU และจำนวนวันให้ครบถ้วน';
+                dailySalesResultDiv.style.display = 'block';
+                dailySalesResultDiv.style.backgroundColor = 'rgba(255, 0, 0, 0.3)'; // สีแดงเตือน
+                return;
+            }
+            if (days <= 0) {
+                 dailySalesResultDiv.textContent = 'จำนวนวันทำงานต้องมากกว่า 0';
+                 dailySalesResultDiv.style.display = 'block';
+                 dailySalesResultDiv.style.backgroundColor = 'rgba(255, 0, 0, 0.3)';
+                return;
+            }
+
+            // --- ส่วนนี้คือ Placeholder ---
+            // !!! โปรดระบุสูตรคำนวณยอดจัดรายวันของคุณที่นี่ !!!
+            // ตัวอย่างสมมติ: ยอดจัดรายวัน = (SKU + MU) / จำนวนวัน
+            // const dailySales = (sku + mu) / days;
+            // dailySalesResultDiv.textContent = `ยอดจัดรายวัน (ตัวอย่าง): ${dailySales.toFixed(2)}`;
+
+            dailySalesResultDiv.textContent = 'โปรดระบุสูตรคำนวณยอดจัดรายวัน';
+            dailySalesResultDiv.style.display = 'block';
+            dailySalesResultDiv.style.backgroundColor = 'rgba(255, 255, 0, 0.3)'; // สีเหลืองแจ้งเตือน
+        });
+        // --- สิ้นสุดฟังก์ชันใหม่ ---
+
 
         const fullscreenBtn = document.getElementById('fullscreenBtn');
         fullscreenBtn.addEventListener('click', () => {
@@ -83,8 +142,6 @@
             }
         });
 
-        // ตรวจสอบว่า API Fullscreen และ Orientation Lock รองรับหรือไม่
-        // และป้องกันไม่ให้ล็อกแนวนอนในหน้านี้
         function checkSupport() {
             const canFullscreen = document.documentElement.requestFullscreen ||
                                   document.documentElement.mozRequestFullScreen ||
@@ -92,11 +149,10 @@
                                   document.documentElement.msRequestFullscreen;
 
             if (!canFullscreen) {
-                 fullscreenBtn.style.display = 'none'; // ซ่อนปุ่มถ้าไม่รองรับ Fullscreen
+                 fullscreenBtn.style.display = 'none';
             }
         }
         checkSupport();
-
     </script>
 </body>
 </html>
