--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 
   <button id="duckButton" class="floating-button right" aria-label="ไปหน้าเลือกเพลง">🦆</button>
   <button id="fullscreenButton" class="floating-button right" aria-label="เปิด/ปิดเต็มจอ">📱</button>
+  <button id="dailyAverageButton" class="floating-button right" aria-label="ไปหน้าเฉลี่ยรายวัน">💰</button>
 
   <script src="script.js"></script>
 </body>
