--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <style>
+    /* CSS ในส่วนนี้ยังคงเป็นเหมือนเดิม */
     body, input, button, p, h1, h2, h3 {
       font-family: 'Kanit', sans-serif;
       font-weight: 400;
