--- a/daily_average.html
+++ b/daily_average.html
@@ -40,32 +40,21 @@
 
             <div class="buttons-group">
                 <button id="clearDataButton" class="clear-button">🗑️ เคลียร์ข้อมูล</button>
-                <a href="index.html" class="back-button">↩️ กลับหน้าหลัก</a>
-            </div>
+                </div>
         </main>
-        <footer>
-            <p>เว็บไซต์นี้ถูกพัฒนาขึ้นเพื่อช่วยคำนวณค่าเฉลี่ยออเดอร์</p>
-            <p>โดยเน้นให้ผู้ใช้งานสามารถกรอกข้อมูลและรับผลลัพธ์ได้รวดเร็ว</p>
-            <p>โค้ดเขียนด้วย HTML, CSS และ JavaScript เพื่อให้โหลดไว</p>
-            <p>พัฒนาโดย Jack Makro © 2025 | ทีมงาน: Team Dev RoshanzeroX</p>
-            <p><span class="footer-icon">📞</span> ติดต่อ: P'Jack OCS Lock 12</p>
-        </footer>
-    </div>
+        </div>
+
+    <button id="homeButton" class="floating-button left" aria-label="กลับหน้าหลัก">🏠</button>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
             const urlParams = new URLSearchParams(window.location.search);
-            // ค่า SKU และ MU ที่ส่งมาจาก index.html
             const totalSku = parseFloat(urlParams.get('sku')) || 0;
             const totalMu = parseFloat(urlParams.get('mu')) || 0;
-            const days = parseFloat(urlParams.get('days')) || 1; // Default to 1 to avoid division by zero
+            const days = parseFloat(urlParams.get('days')) || 1;
 
-            // *** สำคัญ: ตรวจสอบการคำนวณค่าเป้าหมายต่อวันตรงนี้ ***
-            // ถ้าคุณต้องการให้ "เป้าหมาย SKU ต่อวัน" และ "เป้าหมาย MU ต่อวัน"
-            // คือค่าเฉลี่ยของ SKU/MU ที่ทำได้ (totalSku/totalMu) หารด้วยจำนวนวัน (days)
-            const dailyTargetSku = (totalSku / days).toFixed(0); // SKU ที่ควรจัดได้ต่อวันโดยเฉลี่ย
-            const dailyTargetMu = (totalMu / days).toFixed(0);   // MU ที่ควรจัดได้ต่อวันโดยเฉลี่ย
-
+            const dailyTargetSku = (totalSku / days).toFixed(0);
+            const dailyTargetMu = (totalMu / days).toFixed(0);
 
             const targetSkuDisplay = document.getElementById('targetSku');
             const targetMuDisplay = document.getElementById('targetMu');
@@ -74,11 +63,11 @@
             const skuProgressBar = document.getElementById('skuProgressBar');
             const muProgressBar = document.getElementById('muProgressBar');
             const clearDataButton = document.getElementById('clearDataButton');
+            const homeButton = document.getElementById('homeButton'); // เพิ่มตัวแปรสำหรับปุ่มบ้าน
 
             targetSkuDisplay.textContent = dailyTargetSku;
             targetMuDisplay.textContent = dailyTargetMu;
 
-            // โหลดข้อมูลที่จัดไปแล้วจาก Local Storage (ถ้ามี)
             const savedCurrentSku = localStorage.getItem('dailySku');
             const savedCurrentMu = localStorage.getItem('dailyMu');
             if (savedCurrentSku) {
@@ -95,7 +84,6 @@
                 const targetSkuNum = parseFloat(dailyTargetSku);
                 const targetMuNum = parseFloat(dailyTargetMu);
 
-                // คำนวณเปอร์เซ็นต์ความคืบหน้า SKU
                 let skuPercentage = 0;
                 if (targetSkuNum > 0) {
                     skuPercentage = Math.min(100, (currentSku / targetSkuNum) * 100);
@@ -104,8 +92,6 @@
                 skuProgressBar.textContent = skuPercentage.toFixed(0) + '%';
                 skuProgressBar.style.backgroundColor = getProgressBarColor(skuPercentage);
 
-
-                // คำนวณเปอร์เซ็นต์ความคืบหน้า MU
                 let muPercentage = 0;
                 if (targetMuNum > 0) {
                     muPercentage = Math.min(100, (currentMu / targetMuNum) * 100);
@@ -114,7 +100,6 @@
                 muProgressBar.textContent = muPercentage.toFixed(0) + '%';
                 muProgressBar.style.backgroundColor = getProgressBarColor(muPercentage);
 
-                // บันทึกข้อมูลที่กรอกลง Local Storage
                 localStorage.setItem('dailySku', currentSku);
                 localStorage.setItem('dailyMu', currentMu);
             }
@@ -129,20 +114,22 @@
                 }
             }
 
-            // อัปเดตเมื่อมีการเปลี่ยนแปลงค่าในช่องกรอก
             currentSkuInput.addEventListener('input', updateProgress);
             currentMuInput.addEventListener('input', updateProgress);
 
-            // ปุ่มเคลียร์ข้อมูล
             clearDataButton.addEventListener('click', () => {
                 currentSkuInput.value = 0;
                 currentMuInput.value = 0;
                 localStorage.removeItem('dailySku');
                 localStorage.removeItem('dailyMu');
-                updateProgress(); // อัปเดต UI หลังจากเคลียร์
+                updateProgress();
             });
 
-            // เรียกใช้ครั้งแรกเมื่อโหลดหน้า
+            // เพิ่ม Event Listener สำหรับปุ่มบ้าน
+            homeButton.addEventListener('click', () => {
+                window.location.href = "index.html";
+            });
+
             updateProgress();
         });
     </script>
