--- a/songs.html
+++ b/songs.html
@@ -25,7 +25,10 @@
             <button onclick="calculateTargets()">🔍 คำนวณ</button>
 
             <div id="results"></div>
-            </main>
+            <div class="progress-bar-container"> 
+                <div id="progressBar" class="progress-bar-inner" style="width: 0%;">0%</div>
+            </div>
+        </main>
     </div>
 
     <button id="homeButton" class="floating-button" aria-label="กลับหน้าหลัก">🏠</button>
