--- a/daily_average.html
+++ b/daily_average.html
@@ -44,7 +44,9 @@
         </main>
     </div>
 
-    <button id="homeButton" class="floating-button" aria-label="กลับหน้าหลัก (หน้าเป็ด)">🏠</button>
+    <button id="homeButton" class="floating-button" aria-label="กลับหน้าหลัก">🏠</button>
+    <button id="duckButton" class="floating-button" aria-label="ไปหน้าเป็ด">🦆</button>
+    <button id="fullscreenButton" class="floating-button" aria-label="เปิด/ปิดเต็มจอ">📱</button>
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
@@ -120,9 +122,23 @@
                 updateProgress();
             });
 
-            // Event Listener สำหรับปุ่มกลับหน้าหลัก
+            // Event Listeners for Floating Buttons
             document.getElementById("homeButton").addEventListener("click", () => {
-                window.location.href = "index.html"; // ลิงก์กลับไปที่ index.html (หน้าเป็ด)
+                window.location.href = "index.html"; // ไปหน้าหลัก (อาจเป็นหน้าเป็ด)
+            });
+
+            document.getElementById("duckButton").addEventListener("click", () => {
+                window.location.href = "index.html"; // หน้าเป็ด (ถ้าแยก) หรือหน้าหลัก
+            });
+
+            document.getElementById("fullscreenButton").addEventListener("click", () => {
+                if (!document.fullscreenElement) {
+                    document.documentElement.requestFullscreen().catch((err) => {
+                        console.error(`ไม่สามารถเปิดโหมดเต็มจอได้: ${err.message}`);
+                    });
+                } else {
+                    document.exitFullscreen();
+                }
             });
 
             updateProgress();
