--- a/daily_average.html
+++ b/daily_average.html
@@ -128,7 +128,7 @@
             });
 
             document.getElementById("duckButton").addEventListener("click", () => {
-                window.location.href = "index.html"; // หน้าเป็ด (ถ้าแยก) หรือหน้าหลัก
+                window.location.href = "songs.html"; // หน้าเป็ด (ถ้าแยก) หรือหน้าหลัก
             });
 
             document.getElementById("fullscreenButton").addEventListener("click", () => {
