--- a/daily_average.html
+++ b/daily_average.html
@@ -124,11 +124,11 @@
 
             // Event Listeners for Floating Buttons
             document.getElementById("homeButton").addEventListener("click", () => {
-                window.location.href = "index.html"; // ไปหน้าหลัก (อาจเป็นหน้าเป็ด)
+                window.location.href = "index.html";
             });
 
             document.getElementById("duckButton").addEventListener("click", () => {
-                window.location.href = "songs.html"; // หน้าเป็ด (ถ้าแยก) หรือหน้าหลัก
+                window.location.href = "songs.html"; // แก้ไขตรงนี้ให้ไป songs.html
             });
 
             document.getElementById("fullscreenButton").addEventListener("click", () => {
