--- a/daily_average.html
+++ b/daily_average.html
@@ -14,7 +14,7 @@
             <h1>💰 ค่าเฉลี่ยยอดจัดรายวัน</h1>
 
             <div class="info-card">
-                <h2>เป้าหมายประจำวัน (จากหน้าคำนวณ)</h2>
+                <h2>เป้าหมายประจำวัน</h2>
                 <p>เป้าหมาย SKU ต่อวัน: <span id="targetSku">0</span></p>
                 <p>เป้าหมาย MU ต่อวัน: <span id="targetMu">0</span></p>
             </div>
